--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -36,7 +36,7 @@ ul.main-nav {
 .main-nav > li:hover .sub-nav {
   display: flex;
   flex-direction: column;
-  padding-left: 15px;
+  /* padding-left: 15px; */
   background: #444;
 }
 .main-nav > li:hover {
@@ -67,6 +67,14 @@ ul.main-nav {
       margin-left: 20px;
       margin-right: 20px;
     }
+
+.portrait {
+  display: block;
+  margin-left: 24px;
+  margin-top: 4px;
+  margin-bottom: 24px;
+  height: 310px;
+}
 
 /* *******************************************************************
 For big Screens
@@ -124,6 +132,13 @@ For big Screens
       margin-left: 80px;
       margin-right: 80px;
     }
+.portrait {
+  display: inline;
+  float: right;
+  margin-left: 24px;
+  margin-top: 4px;
+  height: 310px;
+}
 }
 
 /* *******************************************************************
